added inital CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title> Project 4 </title>
-  </head>
+  <link href="css/main.css" rel="stylesheet" type="text/css"
+</head>
   <body>
     <p> Project 4 </p>
     </body>
