--- a/index.html
+++ b/index.html
@@ -5,6 +5,128 @@
   <link href="css/main.css" rel="stylesheet" type="text/css"
 </head>
   <body>
-    <p> Project 4 </p>
+
+    <div class="Molly"
+    <p> Molly Manes: Portfolio </p>
+    </div>
+
+    <div class="row">
+      <div class="column">
+        <img src="img/astronaut.jpg" alt="astronaut art" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/circles.jpg" alt="circle painting" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/colored.jpg" alt="painting" style="width:400px" style="height: 400px">
+      </div>
+    </div>
+
+
+
+
+
+    <div class="row">
+      <div class="column">
+        <img src="img/flower.jpg" alt="flower art" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/Harford County Logo Sheet.jpg" alt="logo sheet" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/Pacman.jpg" alt="line drawing" style="width:400px" style="height: 400px">
+      </div>
+    </div>
+
+
+
+
+    <div class="row">
+      <div class="column">
+        <img src="img/Visual Manipulation.jpg" alt="sculpture" style="width:400px" style="height:350px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/Self Portrait.jpg" alt="self portrait painting" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/tapelifting.jpg" alt="tapelifting" style="width:400px" style="height: 400px">
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="column">
+        <img src="img/red.jpg" alt="red painting" style="width:400px" style="height:350px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/volumetric sculpture.jpg" alt="volumetric sculpture" style="width:400px" style="height:400px">
+
+
+      </div>
+      <div class="column">
+        <img src="img/the feeling.jpg" alt="feeling" style="width:400px" style="height: 400px">
+      </div>
+    </div>
+
+
+
+        <div class="row">
+          <div class="column">
+            <img src="img/The crue1.jpg" alt="cure for covid" style="width:400px" style="height:350px">
+
+
+          </div>
+          <div class="column">
+            <img src="img/The Crue2.jpg" alt="cure for covid" style="width:400px" style="height:400px">
+
+
+          </div>
+          <div class="column">
+            <img src="img/The Crue3.jpg" alt="crue for covid" style="width:400px" style="height: 400px">
+          </div>
+        </div>
+
+
+
+<div class="contact">
+<p> Email: mollyymaness@gmail.com
+  <br />
+  Instagram: molly.manes
+  <br />
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </body>
 </html>
